<!--
  ~ Copyright (c) 2019 Frederik Kammel <vatbub123@googlemail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Scoreboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add_player">Add player</string>
    <string name="action_remove_player">Remove player</string>
    <string name="action_switch_mode">Switch mode</string>
    <string name="action_save_game">Save game</string>
    <string name="action_load_game">Load game</string>
    <string name="action_manage_saved_games">Delete saved games</string>
    <string name="edit_player_name">Edit player name</string>
    <string name="edit_score">Edit score</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="main_table_delete_button_content_description_template">Delete row number %d</string>
    <string name="main_table_row_number_template">%d.</string>
    <string name="main_table_score_template">%d</string>
    <string name="max_input_length_reached_toast">Maximum input length reached</string>
    <string name="sidebar_email_address">scoreboard@fredplus10.me</string>
    <string name="sidebar_share">Share the app</string>
    <string name="sidebar_github">GitHub</string>
    <string name="sidebar_instagram">Instagram</string>
    <string name="sidebar_website">Website</string>
    <string name="sidebar_imprint">Imprint &amp; Privacy Policy</string>
    <string name="no_game_active_toast">No game active at the moment</string>
    <string name="app_icon_content_description">App icon</string>
    <string name="switch_mode_title">Switch mode</string>
    <string name="switch_mode_lowscore">Lowscore</string>
    <string name="switch_mode_highscore">Highscore</string>
    <string name="save_game_dialog_title">Save the current game</string>
    <string name="save_game_dialog_hint">type a name</string>
    <string name="leaderboard_title">Leaderboard:</string>
    <string name="leaderboard_empty">Nothing here yet. Start playing to see the leaderboard.</string>
    <string name="leaderboard_rank_template">%d.</string>
    <string name="leaderboard_player_name_template">%s</string>
    <string name="leaderboard_score_template">%d</string>
    <string name="delete_player_title">Delete players</string>
    <string name="player_no_name_template">Player %d</string>
    <string name="action_show_ranking">Show ranking</string>
    <string name="action_hide_ranking">Hide ranking</string>
    <string name="game_no_name_template">Game %d</string>
    <string name="action_new_game">New game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_new_game_delete_current_game">Do you want to delete the current game?</string>
    <string name="snackbar_new_game_manage_games_hint">Click \'Load game\' to restore the old game.</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=com.github.vatbub.scoreboard</string>
    <string name="share_message">This great app allows you to keep track of your scores: %s</string>
    <string name="share_screen_title">Share this application with your friends</string>
    <string name="action_show_sub_total">Show subtotals</string>
    <string name="action_hide_sub_total">Hide subtotals</string>
    <string name="manage_saved_games_title">Delete saved games</string>
    <string name="load_game_title">Load game</string>
    <string name="activity_open_source_licenses_title">Open source licenses</string>
    <string name="imprint_button_open_source_licenses">Show open source licenses</string>
    <string name="activity_about_title">Imprint &amp; Privacy Policy</string>
    <string name="fab_hint_content_description">Use the button in the lower right corner to add a new score line.</string>
    <string name="website_url">https://fredplus10.me/en/</string>
    <string name="github_url">https://github.com/vatbub/Scoreboard</string>
    <string name="instagram_url">https://www.instagram.com/vatbub/</string>
    <string name="add_player_hint_content_description">Use the button just above to add new players to the game.</string>
    <string name="shadow_content_description">It\'s a shadow, don\'t click on it.</string>
    <string name="version_label_template">App version: %s - Git hash: %s</string>
    <string name="action_sync_name">Sync scores</string>
    <string name="title_activity_sync">Sync scores with a friend</string>
    <string name="tab_host_title">Sync your score with someone else</string>
    <string name="tab_join_title">See someone else\'s score</string>
    <string name="sync_host_button_share_game_id_content_description">Share your game id</string>
    <string name="sync_host_graphic_content_description">Graphic demonstrating cloud synchronization</string>
    <string name="sync_host_label_select_game">Select the game you want to share:</string>
    <string name="sync_host_label_your_game_id">Your game id:</string>
    <string name="sync_host_button_start_sharing_select_game">Please select a game first</string>
    <string name="sync_host_button_start_sharing">Start sharing</string>
    <string name="sync_host_button_stop_sharing">Stop sharing</string>
    <string name="sync_host_toast_no_game_selected">Please select a game first!</string>
</resources>
