<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_imprint"
        android:icon="@drawable/ic_menu_info"
        android:title="@string/sidebar_imprint" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/sidebar_share" />
    <item
        android:id="@+id/nav_github"
        android:icon="@drawable/ic_github_logo"
        android:title="@string/sidebar_github" />
    <item
        android:id="@+id/nav_website"
        android:icon="@drawable/ic_website"
        android:title="@string/sidebar_website" />

    <item
        android:id="@+id/nav_instagram"
        android:icon="@drawable/ic_instagram_logo"
        android:title="@string/sidebar_instagram" />

</menu>
