<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_player"
        android:contentDescription="@string/action_add_player"
        android:icon="@drawable/ic_add_user"
        android:orderInCategory="100"
        android:title="@string/action_add_player"
        app:showAsAction="never|ifRoom" />
    <item
        android:id="@+id/action_remove_player"
        android:contentDescription="@string/action_remove_player"
        android:icon="@drawable/ic_remove_user"
        android:orderInCategory="100"
        android:title="@string/action_remove_player"
        app:showAsAction="never|ifRoom" />

    <item
        android:id="@+id/action_switch_mode"
        android:contentDescription="@string/action_switch_mode"
        android:icon="@drawable/ic_remove_user"
        android:orderInCategory="100"
        android:title="@string/action_switch_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_game"
        android:contentDescription="@string/action_save_game"
        android:icon="@drawable/ic_remove_user"
        android:orderInCategory="100"
        android:title="@string/action_save_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load_game"
        android:contentDescription="@string/action_load_game"
        android:icon="@drawable/ic_remove_user"
        android:orderInCategory="100"
        android:title="@string/action_load_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_manage_saved_games"
        android:contentDescription="@string/action_manage_saved_games"
        android:icon="@drawable/ic_remove_user"
        android:orderInCategory="100"
        android:title="@string/action_manage_saved_games"
        app:showAsAction="never" />
</menu>
