<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.viewModels.HostFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="348dp"
                android:contentDescription="@string/sync_host_graphic_content_description"
                android:src="@drawable/ic_undraw_synchronize_ccxk" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sync_host_label_select_game" />

            <Spinner
                android:id="@+id/sync_host_spinner_game_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/sync_host_button_start_stop_sharing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/sync_host_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/sync_host_label_game_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_text_game_id"
                android:text="@string/sync_host_label_your_game_id"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/sync_host_layout_game_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edit_text_game_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:textIsSelectable="true" />

                <ImageButton
                    android:id="@+id/sync_host_button_share_game_id"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/sync_host_button_share_game_id_content_description"
                    android:src="@drawable/ic_menu_share" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>